src/test/resources/scripts/language/parser/invalid/coercion/arithmetic/negativeSupplierFunctionInt.sbsc
// this function returns type NUM, we should not be able to negate it

-(): int -> 4;

return false;